--- a/roles/elasticsearch/tasks/main.yml
+++ b/roles/elasticsearch/tasks/main.yml
@@ -1,5 +1,13 @@
 ---
-- name: Install elasticsearch
-  apt: name=elasticsearch
+- name: Download elasticsearch
+  get_url: >
+    url=https://download.elasticsearch.org/elasticsearch/elasticsearch/elasticsearch-1.5.0.deb
+    dest=/tmp/elasticsearch.deb
   sudo: true
+  tags: install
+
+- name: Install elasticsearch
+  apt: deb=/tmp/elasticsearch.deb
+  sudo: true
+  notify: restart elasticsearch
   tags: install
