Changes for the new CMS. WIP

--- a/roles/postgres/tasks/main.yml
+++ b/roles/postgres/tasks/main.yml
@@ -9,6 +9,17 @@
   sudo: true
   tags: install
 
+- name: Install postgis
+  apt: name={{ item }}
+  with_items:
+    - binutils
+    - libproj-dev
+    - gdal-bin
+    - postgresql-9.3-postgis-2.1
+    - postgresql-9.3-postgis-scripts
+  sudo: true
+  tags: install
+
 - name: Create a db user
   postgresql_user: name={{ db_user }} password={{ db_password }}
   sudo: true
@@ -17,6 +28,12 @@
 
 - name: Create a db
   postgresql_db: name={{ db_name }} owner={{ db_user }}
+  sudo: true
+  sudo_user: postgres
+  tags: install
+
+- name: Create the PostGIS extension
+  postgresql_ext: name=postgis db={{ db_name }}
   sudo: true
   sudo_user: postgres
   tags: install
