--- a/roles/common/tasks/main.yml
+++ b/roles/common/tasks/main.yml
@@ -18,10 +18,13 @@
     - npm
     - libjpeg-dev
     - libfreetype6-dev
+    - libtiff5-dev
     - zlib1g-dev
     - git
     - libxml2-dev
     - libxslt-dev
     - libyaml-dev
+    - supervisor
+    - openjdk-7-jre-headless
   sudo: true
   tags: install
