--- a/roles/django/tasks/main.yml
+++ b/roles/django/tasks/main.yml
@@ -16,18 +16,15 @@
   git: repo={{ git_repo }} update=yes dest={{ base_path }}/pari
   tags: deploy
 
-- name: Install dependencies from requirements.txt
-  pip: requirements={{ requirements_file }} virtualenv={{ base_path }}/pari_env
+- name: Copy the local.py file
+  template: src=local.py dest={{ base_path }}/pari/pari/settings/local.py
+  ignore_errors: true
   tags:
     - install
     - deploy
 
-- name: manage.py syncdb
-  django_manage: >
-    command=syncdb
-    virtualenv={{ base_path }}/pari_env
-    app_path={{ base_path }}/pari
-    settings={{ settings_path }}
+- name: Install dependencies from requirements.txt
+  pip: requirements={{ requirements_file }} virtualenv={{ base_path }}/pari_env
   tags:
     - install
     - deploy
@@ -42,6 +39,48 @@
     - install
     - deploy
 
-# - name: Restart gunicorn through supervisorctl
-#   tags:
-#     - deploy
+- name: Install global dependencies into the virtualenv
+  pip: virtualenv={{ base_path }}/pari_env name={{ item }}
+  with_items:
+    - gunicorn
+    - ipython
+  tags:
+    - install
+
+- name: Copy the supervisor.conf to the project
+  template: src=supervisord.conf dest={{ base_path }}/pari/supervisord.conf
+  tags:
+    - install
+    - deploy
+
+- name: Copy the gunicorn_conf.py to the project
+  template: src=gunicorn_conf.py dest={{ base_path }}/pari/gunicorn_conf.py
+  tags:
+    - install
+    - deploy
+
+- name: collectstatic
+  django_manage: >
+    command="collectstatic --noinput"
+    virtualenv={{ base_path }}/pari_env
+    app_path={{ base_path }}/pari
+    settings={{ settings_path }}
+  tags:
+    - install
+    - deploy
+
+- name: compress
+  django_manage: >
+    command="compress"
+    virtualenv={{ base_path }}/pari_env
+    app_path={{ base_path }}/pari
+    settings={{ settings_path }}
+  tags:
+    - install
+    - deploy
+
+- name: Restart gunicorn through supervisor
+  supervisorctl: name={{ proj_name }} state=restarted config={{ base_path }}/pari/supervisord.conf
+  tags:
+    - install
+    - deploy
