--- a/roles/elasticsearch/tasks/main.yml
+++ b/roles/elasticsearch/tasks/main.yml
@@ -1,7 +1,7 @@
 ---
 - name: Download elasticsearch
   get_url: >
-    url=https://download.elasticsearch.org/elasticsearch/elasticsearch/elasticsearch-1.5.0.deb
+    url=https://download.elastic.co/elasticsearch/elasticsearch/elasticsearch-1.7.0.deb
     dest=/tmp/elasticsearch.deb
   sudo: true
   tags: install
