--- a/roles/nginx/tasks/main.yml
+++ b/roles/nginx/tasks/main.yml
@@ -5,12 +5,26 @@
   tags: install
 
 - name: Remove the default config
-  command: rm /etc/nginx/sites-enabled/default
+  file: state=absent path=/etc/nginx/sites-enabled/default
   sudo: true
+  ignore_errors: true
+  tags: install
+
+- name: Copy the SSL Certificate
+  copy: src=../templates/server.crt dest=/etc/nginx/server.crt
+  sudo: true
+  ignore_errors: true
+  tags: install
+
+- name: Copy the SSL Key
+  copy: src=../templates/server.key dest=/etc/nginx/server.key
+  sudo: true
+  ignore_errors: true
   tags: install
 
 - name: Copy nginx configuration
   template: src=pari.conf dest=/etc/nginx/sites-enabled/pari.conf
   sudo: true
+  ignore_errors: true
   notify: restart nginx
   tags: install
