--- a/roles/nginx/templates/pari.conf
+++ b/roles/nginx/templates/pari.conf
@@ -8,9 +8,8 @@ server {
 
 server {
     listen 80;
-    listen 443;
     server_name {{ domain }};
-    return 301 $scheme://{{ domain }}$request_uri;
+    return 301 https://{{ domain }}$request_uri;
 }
 
 server {
