--- a/roles/nginx/templates/pari.conf
+++ b/roles/nginx/templates/pari.conf
@@ -8,7 +8,7 @@ server {
 
 server {
     listen 80;
-    server_name {{ domain }};
+    server_name {{ domain }} www.{{ domain }};
     return 301 https://{{ domain }}$request_uri;
 }
 
@@ -16,7 +16,7 @@ server {
     listen 80;
     listen 443 default ssl;
 
-    server_name {{ domain }};
+    server_name {{ domain }} www.{{ domain }};
     client_max_body_size 10M;
     keepalive_timeout    70;
 
