--- a/roles/django/templates/supervisord.conf
+++ b/roles/django/templates/supervisord.conf
@@ -6,3 +6,5 @@ command={{ base_path }}/pari_env/bin/gunicorn -c {{ base_path }}/pari/gunicorn_c
 autostart=true
 autorestart=true
 redirect_stderr=true
+user={{ ansible_user_id }}
+group={{ ansible_user_id }}
