--- a/roles/nginx/templates/pari.conf
+++ b/roles/nginx/templates/pari.conf
@@ -15,8 +15,16 @@ server {
 server {
     listen 80;
     listen 443 default ssl;
+    server_name www.{{ domain }};
 
-    server_name {{ domain }} www.{{ domain }};
+    rewrite ^ $scheme://{{ domain }}$request_uri permanent;
+}
+
+server {
+    listen 80;
+    listen 443 default ssl;
+
+    server_name {{ domain }};
     client_max_body_size 10M;
     keepalive_timeout    70;
 
