--- a/roles/nginx/templates/pari.conf
+++ b/roles/nginx/templates/pari.conf
@@ -36,6 +36,10 @@ server {
     ssl_stapling_verify     on;
     ssl_ciphers "EECDH+ECDSA+AESGCM EECDH+aRSA+AESGCM EECDH+ECDSA+SHA384 EECDH+ECDSA+SHA256 EECDH+aRSA+SHA384 EECDH+aRSA+SHA256 EECDH+aRSA+RC4 EECDH EDH+aRSA !RC4 !aNULL !eNULL !LOW !3DES !MD5 !EXP !PSK !SRP !DSS";
 
+    if ($host !~* ^({{ domain }}|www.{{ domain }})$) {
+        return 444;
+     }
+
     location / {
         proxy_redirect      off;
         proxy_set_header    Host                    $host;
@@ -49,6 +53,7 @@ server {
         root            {{ base_path }}/pari;
         access_log      off;
         log_not_found   off;
+	gzip_static on;
 	expires 1d;
     }
 
@@ -56,6 +61,7 @@ server {
         root            {{ base_path }}/pari;
         access_log      off;
         log_not_found   off;
+	gzip_static on;
 	expires 1d;
     }
 
