Command to flush cache while deploying.

--- a/roles/common/tasks/main.yml
+++ b/roles/common/tasks/main.yml
@@ -31,3 +31,8 @@
     - redis-server
   sudo: true
   tags: install
+
+- name: Install redis python library
+  pip: redis
+  sudo: true
+  tags: install
