--- a/roles/django/tasks/main.yml
+++ b/roles/django/tasks/main.yml
@@ -100,6 +100,13 @@
     - deploy
   ignore_errors: true
 
+- name: Clear cache
+  redis: command=flush flush_mode=all
+  tags:
+    - install
+    - deploy
+  ignore_errors: true
+
 - name: Restart supervisord
   service: name=supervisor state=restarted
   sudo: true
