--- a/roles/nginx/templates/pari.conf
+++ b/roles/nginx/templates/pari.conf
@@ -14,7 +14,7 @@ server {
 
 server {
     listen 80;
-    listen 443 default ssl;
+    listen 443 ssl;
     server_name www.{{ domain }};
 
     rewrite ^ $scheme://{{ domain }}$request_uri permanent;
