--- a/roles/nginx/templates/pari.conf
+++ b/roles/nginx/templates/pari.conf
@@ -15,6 +15,7 @@ server {
 server {
     listen 443 default ssl;
     server_name {{ domain }};
+    gzip on;
 
     client_max_body_size 10M;
     keepalive_timeout    70;
@@ -51,7 +52,7 @@ server {
         access_log      off;
         log_not_found   off;
 	gzip_static on;
-	expires 1d;
+	expires 28d;
     }
 
     location /media {
@@ -59,20 +60,20 @@ server {
         access_log      off;
         log_not_found   off;
 	gzip_static on;
-	expires 1d;
+	expires 28d;
     }
 
     location /robots.txt {
         root            {{ base_path }}/pari/static;
         access_log      off;
         log_not_found   off;
-	expires 1d;
+	expires 28d;
     }
 
     location /favicon.ico {
         root            {{ base_path }}/pari/static;
         access_log      off;
         log_not_found   off;
-	expires 1d;
+	expires 28d;
     }
 }
