Gzip static assets served by nginx.

--- a/roles/nginx/templates/pari.conf
+++ b/roles/nginx/templates/pari.conf
@@ -16,6 +16,11 @@ server {
     listen 443 default ssl;
     server_name {{ domain }};
     gzip on;
+    gzip_min_length 1024;
+    gzip_buffers 4 32k;
+    gzip_types text/plain application/x-javascript text/css image/png image/jpeg;
+    gzip_vary on;
+    gzip_comp_level 9;
 
     client_max_body_size 10M;
     keepalive_timeout    70;
