--- a/roles/nginx/templates/pari.conf
+++ b/roles/nginx/templates/pari.conf
@@ -9,7 +9,34 @@ server {
 server {
     listen 80;
     server_name {{ domain }} www.{{ domain }};
+    {% if cert.stat.exists %}
     rewrite ^ https://{{ domain }}$request_uri permanent;
+    {% else %}
+    location / {
+        proxy_redirect      off;
+        proxy_set_header    Host                    $host;
+        proxy_set_header    X-Real-IP               $remote_addr;
+        proxy_set_header    X-Forwarded-For         $proxy_add_x_forwarded_for;
+        proxy_set_header    X-Forwarded-Protocol    $scheme;
+        proxy_pass          http://pari;
+    }
+
+    location /static {
+        root            {{ base_path }}/pari;
+        access_log      off;
+        log_not_found   off;
+	gzip_static on;
+	expires 28d;
+    }
+
+    location /media {
+        root            {{ base_path }}/pari;
+        access_log      off;
+        log_not_found   off;
+	gzip_static on;
+	expires 28d;
+    }
+    {% endif %}
 }
 
 server {
@@ -25,8 +52,10 @@ server {
     client_max_body_size 10M;
     keepalive_timeout    70;
 
+    {% if cert.stat.exists %}
     ssl_certificate         server.crt;
     ssl_certificate_key     server.key;
+    {% endif %}
     ssl_session_cache       shared:SSL:10m;
     ssl_session_timeout     10m;
     ssl_stapling            on;
