--- a/roles/nginx/templates/pari.conf
+++ b/roles/nginx/templates/pari.conf
@@ -9,48 +9,17 @@ server {
 server {
     listen 80;
     server_name {{ domain }} www.{{ domain }};
+
     {% if cert.stat.exists %}
-    rewrite ^ https://{{ domain }}$request_uri permanent;
+      rewrite ^ https://{{ domain }}$request_uri permanent;
     {% else %}
-    location / {
-        proxy_redirect      off;
-        proxy_set_header    Host                    $host;
-        proxy_set_header    X-Real-IP               $remote_addr;
-        proxy_set_header    X-Forwarded-For         $proxy_add_x_forwarded_for;
-        proxy_set_header    X-Forwarded-Protocol    $scheme;
-        proxy_pass          http://pari;
-    }
-
-    location /static {
-        root            {{ base_path }}/pari;
-        access_log      off;
-        log_not_found   off;
-	gzip_static on;
-	expires 28d;
-    }
-
-    location /media {
-        root            {{ base_path }}/pari;
-        access_log      off;
-        log_not_found   off;
-	gzip_static on;
-	expires 28d;
-    }
+      {% include 'http_proxy.j2' %}
     {% endif %}
 }
 
 server {
     listen 443 default ssl;
     server_name {{ domain }};
-    gzip on;
-    gzip_min_length 1024;
-    gzip_buffers 4 32k;
-    gzip_types text/plain application/x-javascript text/css image/png image/jpeg;
-    gzip_vary on;
-    gzip_comp_level 9;
-
-    client_max_body_size 10M;
-    keepalive_timeout    70;
 
     {% if cert.stat.exists %}
     ssl_certificate         server.crt;
@@ -64,50 +33,5 @@ server {
     ssl_ciphers "ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-AES256-GCM-SHA384:DHE-RSA-AES128-GCM-SHA256:DHE-DSS-AES128-GCM-SHA256:kEDH+AESGCM:ECDHE-RSA-AES128-SHA256:ECDHE-ECDSA-AES128-SHA256:ECDHE-RSA-AES128-SHA:ECDHE-ECDSA-AES128-SHA:ECDHE-RSA-AES256-SHA384:ECDHE-ECDSA-AES256-SHA384:ECDHE-RSA-AES256-SHA:ECDHE-ECDSA-AES256-SHA:DHE-RSA-AES128-SHA256:DHE-RSA-AES128-SHA:DHE-DSS-AES128-SHA256:DHE-RSA-AES256-SHA256:DHE-DSS-AES256-SHA:DHE-RSA-AES256-SHA:AES128-GCM-SHA256:AES256-GCM-SHA384:AES128-SHA256:AES256-SHA256:AES128-SHA:AES256-SHA:AES:CAMELLIA:DES-CBC3-SHA:!aNULL:!eNULL:!EXPORT:!DES:!RC4:!MD5:!PSK:!aECDH:!EDH-DSS-DES-CBC3-SHA:!EDH-RSA-DES-CBC3-SHA:!KRB5-DES-CBC3-SHA";
     ssl_prefer_server_ciphers on;
 
-    if ($http_host = www.{{ domain }}) {
-        rewrite ^ https://{{ domain }}$request_uri permanent;
-    }
-
-    if ($host !~* ^({{ domain }}|www.{{ domain }})$) {
-        return 444;
-     }
-
-    location / {
-        proxy_redirect      off;
-        proxy_set_header    Host                    $host;
-        proxy_set_header    X-Real-IP               $remote_addr;
-        proxy_set_header    X-Forwarded-For         $proxy_add_x_forwarded_for;
-        proxy_set_header    X-Forwarded-Protocol    $scheme;
-        proxy_pass          http://pari;
-    }
-
-    location /static {
-        root            {{ base_path }}/pari;
-        access_log      off;
-        log_not_found   off;
-	gzip_static on;
-	expires 28d;
-    }
-
-    location /media {
-        root            {{ base_path }}/pari;
-        access_log      off;
-        log_not_found   off;
-	gzip_static on;
-	expires 28d;
-    }
-
-    location /robots.txt {
-        root            {{ base_path }}/pari/static;
-        access_log      off;
-        log_not_found   off;
-	expires 28d;
-    }
-
-    location /favicon.ico {
-        root            {{ base_path }}/pari/static;
-        access_log      off;
-        log_not_found   off;
-	expires 28d;
-    }
+    {% include 'http_proxy.j2' %}
 }
