Write the dhparam.pem to /etc/ssl/certs/

--- a/roles/nginx/tasks/main.yml
+++ b/roles/nginx/tasks/main.yml
@@ -28,7 +28,7 @@
   when: cert.stat.exists == true
 
 - name: Configure for DHE parameters
-  command: openssl dhparam -out dhparam.pem 2048
+  command: openssl dhparam -out /etc/ssl/certs/dhparam.pem 2048
   sudo: true
   ignore_errors: true
   tags: install
