[Ven/Dee] Added variables for vagrant env and added new QA to hosts

--- a/hosts.yml
+++ b/hosts.yml
@@ -1,5 +1,18 @@
 [production]
 ruralindiaonline.org
 
+[qa]
+54.255.193.26
+
 [local]
 127.0.0.1
+
+[vagrant]
+0.0.0.0
+
+[vagrant:vars]
+ansible_ssh_host=0.0.0.0
+ansible_ssh_port=2222
+base_path=/vagrant
+app_path=/vagrant
+requirements_file="/vagrant/requirements.txt"
