--- a/roles/common/tasks/main.yml
+++ b/roles/common/tasks/main.yml
@@ -42,7 +42,7 @@
   get_url: url=https://nodejs.org/dist/v4.5.0/node-v4.5.0.tar.gz dest={{ base_path }}
 
 - name: Uncompress the node.js LTS package
-  unarchive: src=node-v4.5.0.tar.gz dest={{ base_path }} copy=no
+  unarchive: src={{ base_path }}/node-v4.5.0.tar.gz dest={{ base_path }} copy=no
 
 - name: Configure node.js LTS
   command: chdir={{ base_path }}/node-v4.5.0 ./configure
