--- a/roles/django/templates/supervisord.conf
+++ b/roles/django/templates/supervisord.conf
@@ -2,7 +2,7 @@
 programs=gunicorn_{{ proj_name }}
 
 [program:gunicorn_{{ proj_name }}]
-command={{ base_path }}/pari_env/bin/gunicorn -c {{ base_path }}/pari/gunicorn_conf.py -p /tmp/gunicorn.pid pari.wsgi
+command={{ base_path }}/pari_env/bin/gunicorn -c {{ app_path }}/gunicorn_conf.py -p /tmp/gunicorn.pid pari.wsgi
 autostart=true
 autorestart=true
 redirect_stderr=true
