[Nim/Dee] Default db import for local vagrant setup

--- a/roles/postgres/tasks/main.yml
+++ b/roles/postgres/tasks/main.yml
@@ -48,3 +48,9 @@
   become_method: sudo
   become_user: postgres
   tags: install
+
+- name: Import sample dump for db
+  shell: PGPASSWORD={{ db_password }} psql -U {{ db_user }} -h {{ domain }} < {{ base_path }}/dump.sql
+  become_user: postgres
+  when: ansible_ssh_user == "vagrant"
+  tags: install
