Add the ability to run vagrant with dev settings

--- a/hosts.yml
+++ b/hosts.yml
@@ -8,11 +8,10 @@ ruralindiaonline.org
 127.0.0.1
 
 [vagrant]
-0.0.0.0
+development.ruralindiaonline.org
 
 [vagrant:vars]
-ansible_ssh_host=0.0.0.0
-ansible_ssh_port=2222
 base_path=/vagrant
 app_path=/vagrant
 requirements_file="/vagrant/requirements.txt"
+settings_path="pari.settings.dev"
