Specify requirements file for vagrant setup

--- a/hosts.yml
+++ b/hosts.yml
@@ -13,5 +13,5 @@ development.ruralindiaonline.org
 [vagrant:vars]
 base_path=/vagrant
 app_path=/vagrant
-requirements_file="/vagrant/requirements.txt"
+requirements_file="/vagrant/requirements.dev.txt"
 settings_path="pari.settings.dev"
