--- a/roles/development/tasks/database.yml
+++ b/roles/development/tasks/database.yml
@@ -3,6 +3,7 @@
   become: true
   become_method: sudo
   become_user: postgres
+  tags: install
 
 - name: Create test db
   postgresql_db: name=test_{{ db_name }} owner={{ db_user }}
@@ -11,6 +12,7 @@
   become: true
   become_method: sudo
   become_user: postgres
+  tags: install
 
 - name: Create the PostGIS extension for test DB
   postgresql_ext: name=postgis db=test_{{ db_name }}
@@ -19,3 +21,4 @@
   become: true
   become_method: sudo
   become_user: postgres
+  tags: install
