--- a/roles/django/tasks/main.yml
+++ b/roles/django/tasks/main.yml
@@ -122,7 +122,7 @@
   ignore_errors: true
 
 - name: Restart supervisord
-  service: name=supervisor state=restarted
+  command: service supervisor restart
   become: true
   become_method: sudo
   tags: install
