--- a/roles/django/tasks/main.yml
+++ b/roles/django/tasks/main.yml
@@ -1,4 +1,8 @@
 ---
+- name: Create the virtualenv
+  command: virtualenv --distribute {{ base_path }}/pari_env  creates={{ base_path }}/pari_env/bin/python
+  tags: install
+
 - name: Install global dependencies into the virtualenv
   pip: virtualenv={{ base_path }}/pari_env name={{ item }} state=forcereinstall
   with_items:
@@ -12,9 +16,6 @@
   tags:
     - install
 
-#- name: Create the virtualenv
-#  command: virtualenv --distribute {{ base_path }}/pari_env
-#  tags: install
 
 - name: Clone the source from github
   git: clone=yes accept_hostkey=yes repo={{ git_repo }} dest={{ app_path }}
