Deploy code from release-candidate branch for QA/Staging

--- a/hosts.yml
+++ b/hosts.yml
@@ -10,6 +10,9 @@ ruralindiaonline.org
 [vagrant]
 development.ruralindiaonline.org
 
+[qa:vars]
+git_revision_to_pull=release-candidate
+
 [vagrant:vars]
 base_path=/vagrant
 app_path=/vagrant
