Adding staging environment

--- a/hosts.yml
+++ b/hosts.yml
@@ -7,6 +7,10 @@ ruralindiaonline.org
 [local]
 127.0.0.1
 
+[staging]
+ec2-52-14-252-14.us-east-2.compute.amazonaws.com
+
+
 [vagrant]
 development.ruralindiaonline.org
 
