--- a/hosts.yml
+++ b/hosts.yml
@@ -9,6 +9,7 @@ ruralindiaonline.org
 
 [staging]
 ec2-52-14-252-14.us-east-2.compute.amazonaws.com
+private_key_file = ../pari-test.pem
 
 
 [vagrant]
