--- a/roles/common/tasks/main.yml
+++ b/roles/common/tasks/main.yml
@@ -89,7 +89,7 @@
   tags: install
 
 - name: Enable ufw logging
-  ufw: logging=on
+  ufw: logging=low
   become: true
   become_method: sudo
   tags: install
@@ -105,11 +105,13 @@
   become: true
   become_method: sudo
   tags: install
+  when: enable_secure_access
 
 - name: Disallow password authentication
   action: lineinfile dest=/etc/ssh/sshd_config regexp="^PasswordAuthentication" line="PasswordAuthentication no" state=present
   become: true
   become_method: sudo
   tags: install
+  when: enable_secure_access
   notify:
     - Restart ssh
