Prevent pre-production environments from indexing by web crawlers

--- a/hosts.yml
+++ b/hosts.yml
@@ -12,6 +12,7 @@ development.ruralindiaonline.org
 
 [production:vars]
 git_revision_to_pull=release
+allow_robots=True
 
 [qa:vars]
 git_revision_to_pull=release-candidate
