Add staging environment with domain name

--- a/hosts.yml
+++ b/hosts.yml
@@ -1,8 +1,8 @@
 [production]
 ruralindiaonline.org
 
-[qa]
-54.255.193.26
+[staging]
+staging.ruralindiaonline.org
 
 [local]
 127.0.0.1
@@ -14,8 +14,9 @@ development.ruralindiaonline.org
 git_revision_to_pull=release
 allow_robots=True
 
-[qa:vars]
+[staging:vars]
 git_revision_to_pull=release-candidate
+settings_path="pari.settings.staging"
 
 [vagrant:vars]
 base_path=/vagrant
