--- a/hosts.yml
+++ b/hosts.yml
@@ -4,16 +4,28 @@ ruralindiaonline.org
 [qa]
 54.255.193.26
 
-[staging]
-ec2-13-58-83-216.us-east-2.compute.amazonaws.com
+[local]
+127.0.0.1
 
 [vagrant]
 development.ruralindiaonline.org
+
+[prod-recovery]
+192.168.33.21
+
+[production:vars]
+git_revision_to_pull=release
 
 [qa:vars]
 git_revision_to_pull=release-candidate
 
 [vagrant:vars]
+base_path=/vagrant
+app_path=/vagrant
+requirements_file="/vagrant/requirements.dev.txt"
+settings_path="pari.settings.dev"
+
+[prod-recovery:vars]
 base_path=/vagrant
 app_path=/vagrant
 requirements_file="/vagrant/requirements.dev.txt"
